# Foxglove

./: meson.build
examples/: main.cpp  meson.build  switcherooctl.sh
examples/shaders/: colored_triangle_mesh.vert  gradient.comp  meson.build
include/: meson.build
include/foxglove/core/: camera.h  engine.h  handle.h  input_manager.h  types.h
include/foxglove/frame/: frame_context.h
include/foxglove/framegraph/: attachments.h  builder.h  fg_resource.h  frame_context.h  framegraph.h  graphics_context.h  pass.h  pass_context.h  util.h
include/foxglove/memory/: allocator.h
include/foxglove/renderer/: builder.h  framegraph.h  framegraph_pass.h  pass.h  renderer.h  util.h
include/foxglove/resources/: attachments.h  buffer_pool.h  desc.h  fg_resource_types.h  frame_context.h  graphics_context.h  handle.h  handle_registry.h  loader.h  pass_context.h  pipeline.h  pipeline_manager.h  resource.h  resource_desc.h  resource_manager.h  resource_pool.h  resource_types.h  shader.h  shader_library.h  texture_pool.h  upload_manager.h
include/foxglove/resources/pipeline/: pipeline.h  pipeline_manager.h
include/foxglove/resources/shader/: shader.h  shader_library.h
include/foxglove/vulkan/: command_buffer.h  descriptors.h  gpu_image.h  swapchain.h  vulkan_context.h
include/foxglove/window/: window.h
src/: README.txt  meson.build
src/core/: camera.cpp  engine.cpp  input_manager.cpp  meson.build
src/frame/: frame_context.cpp  meson.build
src/framegraph/: builder.cpp  frame_context.cpp  framegraph.cpp  graphics_context.cpp  meson.build  pass_context.cpp  util.cpp
src/memory/: allocator.cpp  meson.build
src/renderer/: builder.cpp  framegraph.cpp  framegraph_pass.cpp  meson.build  renderer.cpp  util.cpp
src/resources/: frame_context.cpp  graphics_context.cpp  loader.cpp  meson.build  pass_context.cpp  pipeline_manager.cpp  resource_manager.cpp  resource_pool.cpp  upload_manager.cpp
src/resources/pipeline/: meson.build  pipeline_manager.cpp
src/vulkan/: command_buffer.cpp  descriptors.cpp  gpu_image.cpp  meson.build  swapchain.cpp  vulkan_context.cpp
src/window/: meson.build  window.cpp
